Doc film update
